[tool.poetry]
name = "qiskit-qube-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
qiskit = "^0.45.1"
qiskit-experiments = "^0.5.4"
qiskit-dynamics = "^0.4.2"
jax = "^0.4.23"
jaxlib = "^0.4.23"
qiskit-aer = "^0.13.1"
e7awgsw = { path = "e7awgsw" }

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
